tests/grammar/valid/v1_int_char_declaration.c
#include <stdint.h>
#include <stdio.h>

int32_t c = 'c';
