tests/grammar/invalid/v5_invalid_array_definition_negativeSize.c
#include <stdint.h>
#include <stdio.h>

int tab[-6];